<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>space.nanobreaker</groupId>
        <artifactId>htmx-qute-quarkus</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../../../pom.xml</relativePath>
    </parent>
    <artifactId>monolith-configuration</artifactId>
    <name>monolith-configuration</name>
    <version>1.0.0-SNAPSHOT</version>
    <properties>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.10.0</quarkus.platform.version>
        <quarkus.application.version>1.0.0-SNAPSHOT</quarkus.application.version>
        <surefire-plugin.version>3.1.2</surefire-plugin.version>
        <compiler-plugin.version>3.11.0</compiler-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- DOMAIN -->
        <dependency>
            <groupId>space.nanobreaker</groupId>
            <artifactId>core-domain-v1</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>space.nanobreaker</groupId>
            <artifactId>core-usecases-v1</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>space.nanobreaker</groupId>
            <artifactId>infrastructure-dataproviders-postgres-v1</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <!-- LIBRARIES -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-qute</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-csrf-reactive</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-reactive-panache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-reactive-pg-client</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-oidc-db-token-state-manager</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-validator</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-health</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-vertx</artifactId>
        </dependency>
        <!--
                <dependency>
                    <groupId>io.quarkiverse.web-bundler</groupId>
                    <artifactId>quarkus-web-bundler</artifactId>
                    <version>1.4.0</version>
                </dependency>
        -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-container-image-docker</artifactId>
        </dependency>
        <!-- web dependencies -->
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>htmx.org</artifactId>
            <version>1.9.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>missing.css</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>hyperscript.org</artifactId>
            <version>0.9.12</version>
            <scope>provided</scope>
        </dependency>
        <!-- AUTHENTICATION/AUTHORIZATION -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-oidc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-keycloak-authorization</artifactId>
        </dependency>
        <!-- TRACING -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-opentelemetry</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry.instrumentation</groupId>
            <artifactId>opentelemetry-jdbc</artifactId>
        </dependency>
        <!-- PROCESSOR -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
            <scope>provided</scope>
        </dependency>
        <!-- TESTS -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-test-keycloak-server</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.26.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>../../../config</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <extensions>
                        <extension>
                            <groupId>io.quarkus</groupId>
                            <artifactId>quarkus-rest-qute</artifactId>
                        </extension>
                    </extensions>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <jvmArgs>--enable-preview</jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.type>native</quarkus.package.type>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${surefire-plugin.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <systemPropertyVariables>
                                        <native.image.path>
                                            ${project.build.directory}/${project.build.finalName}-runner
                                        </native.image.path>
                                        <java.util.logging.manager>org.jboss.logmanager.LogManager
                                        </java.util.logging.manager>
                                        <maven.home>${maven.home}</maven.home>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>locker</id>
            <activation>
                <property>
                    <name>!unlocked</name>
                </property>
            </activation>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>gen-mapping</artifactId>
                        <version>0.3.5</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>resolve-uri</artifactId>
                        <version>3.1.2</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>set-array</artifactId>
                        <version>1.2.1</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>source-map</artifactId>
                        <version>0.3.6</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>sourcemap-codec</artifactId>
                        <version>1.4.15</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm.at.jridgewell</groupId>
                        <artifactId>trace-mapping</artifactId>
                        <version>0.3.25</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>acorn</artifactId>
                        <version>8.11.3</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>buffer-from</artifactId>
                        <version>1.1.2</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>commander</artifactId>
                        <version>2.20.3</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>htmx.org</artifactId>
                        <version>1.9.11</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>hyperscript.org</artifactId>
                        <version>0.9.12</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>markdown-it-deflist</artifactId>
                        <version>2.1.0</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>missing.css</artifactId>
                        <version>1.1.1</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>source-map-support</artifactId>
                        <version>0.5.21</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>source-map</artifactId>
                        <version>0.6.1</version>
                        <scope>provided</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.mvnpm</groupId>
                        <artifactId>terser</artifactId>
                        <version>5.30.3</version>
                        <scope>provided</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
    </profiles>
</project>
